--- a/main/templates/moderator-panel.html
+++ b/main/templates/moderator-panel.html
@@ -49,7 +49,7 @@
                             <p class="full-name ml05rem"></p>
                         </a>
                         <span class="created-time p06rem"></span>
-                        <button type="button" class="button button--red small mr5px modal-window" data-window=".ban-user__modal-window">Ban user</button>
+                        <button type="button" class="button button--red small mr5px modal-window ban-user-button" data-window=".ban-user__modal-window">Ban user</button>
                     </div>
                     <div class="image-detail__image mb20px">
                         <img class="image-detail__img" src="#">
