--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -50,7 +50,7 @@
         <div class="flex fc w100per">
     {% endif %}
             {% include 'header.html' %}          
-            <section class="image-detail {% if image.ratio > 1 %}desktop {% endif %}mt50px">
+            <section class="image-detail {% if image.ratio > 1.1 %}desktop {% endif %}mt50px">
                 <div class="flex jc">
                     <div class="image-detail__info panel mb20px">
                         <a class="account-info flex jc ac p06rem" href="{% url 'main:cabinet' image.author.username %}">
@@ -86,13 +86,13 @@
                                         </g>
                                     </svg>
                                     {% else %}
-                                        <svg class="upvote" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 -28 512.00002 512">
+                                        <svg class="upvote vote-inactive" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 -28 512.00002 512">
                                             <path d="m471.382812 44.578125c-26.503906-28.746094-62.871093-44.578125-102.410156-44.578125-29.554687 0-56.621094 9.34375-80.449218 27.769531-12.023438 9.300781-22.917969 20.679688-32.523438 33.960938-9.601562-13.277344-20.5-24.660157-32.527344-33.960938-23.824218-18.425781-50.890625-27.769531-80.445312-27.769531-39.539063 0-75.910156 15.832031-102.414063 44.578125-26.1875 28.410156-40.613281 67.222656-40.613281 109.292969 0 43.300781 16.136719 82.9375 50.78125 124.742187 30.992188 37.394531 75.535156 75.355469 127.117188 119.3125 17.613281 15.011719 37.578124 32.027344 58.308593 50.152344 5.476563 4.796875 12.503907 7.4375 19.792969 7.4375 7.285156 0 14.316406-2.640625 19.785156-7.429687 20.730469-18.128907 40.707032-35.152344 58.328125-50.171876 51.574219-43.949218 96.117188-81.90625 127.109375-119.304687 34.644532-41.800781 50.777344-81.4375 50.777344-124.742187 0-42.066407-14.425781-80.878907-40.617188-109.289063zm0 0"></path>
                                         </svg>
                                         <svg class="default-vote" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24">
                                             <path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"></path>
                                         </svg>
-                                        <svg class="downvote" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 511.964 511.964" xml:space="preserve">
+                                        <svg class="downvote vote-inactive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 511.964 511.964" xml:space="preserve">
                                             <g transform="translate(1 1)">
                                                 <g>
                                                     <g>
