--- a/static/css/index.css
+++ b/static/css/index.css
@@ -546,8 +546,11 @@ input[type="file"] {    display: none;
 .tags-panel {
     font-weight: 900;
     width: 100%;
+    flex-wrap: wrap;
 }
 .tag-name {
+    margin-right: 5px;
+    margin-top: 5px;
     padding: .5rem 1rem;
     border: 1px solid #e8e8e8;
     box-shadow: 0 1px 2px 0 rgb(0 0 5%);
@@ -1005,7 +1008,10 @@ img {
         border: 1px solid rgba(0,0,0, .05);
     }
     .image-detail__edit {
-        width: 100%;
+        width: 70%;
+    }
+    .image-detail.desktop .image-detail__edit {
+	width: 100%
     }
 
     .report-form {
