--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -16,7 +16,7 @@
     {% if common_tags %}
         {% get_tag_weight common_tags as tags %}
         {% for tag in tags %}
-            <div class="button tag-name mr5px find-button qTags" data-where="^(?=.*\y{{ tag.slug }}\y).*$">
+            <div class="button tag-name mr5px find-button qTags" data-where="^(?=.*\y{{ tag.slug }}\y).*$" data-without-options="colors_id:*">
                 <span style="font-size: {{tag.weight|floatformat:0}}px;">{{ tag }}</span>
             </div>
         {% endfor %}
